<resources>

    <string name="app_name">ThirdEye</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
	<string name="contentdialog">
	    This application needs access to Location services. Please select the accept button to proceed.
	</string>
	
	<string name="tv_text_login">LOGIN</string>
	<string name="tv_text_password">Enter Password</string>
	<string name="tv_text_username">Enter Username</string>
	
	<string name="tv_text_enter_new_user_name">Enter new username</string>
	<string name="tv_text_enter_new_password">Enter new password</string>
	<string name="tv_text_reenter_new_password">Re-enter new password</string>
	
	
	<string name="cb_text_use_my_location" >Use my location information</string>
	<string name="bt_text_new_user_click_here">New user? Click here</string>
	<string name="bt_text_register">Register</string>
	<string name="bt_text_cancel">Cancel</string>
	<string name="bt_text_reset_fields">Clear</string>
	<string name="bt_text_login">Login</string>
</resources>